# chessaton

./: Dockerfile  README.md  docker-compose.yml
CAD/: Disk.SLDPRT  M4x0.7x30.SLDPRT  Part2.SLDPRT  Part3.SLDPRT  Part4.SLDPRT  Part6.SLDPRT  gripper_link.SLDASM  link1.SLDASM  link2.SLDASM  link3.SLDASM  link4.SLDASM  m4x0.7x70.SLDPRT  nut_m4.SLDPRT  part10.SLDPRT  part11.SLDPRT  part5.SLDPRT  part7.SLDPRT  part8.SLDPRT  part9.SLDPRT  skf_bearing_6205_2.SLDASM  skf_bearing_6205_2_01.SLDPRT  skf_bearing_6205_2_02.SLDPRT  skf_bearing_6205_2_03.SLDPRT
CAD/tower-pro-mg946r-metal-gear-servo-1.snapshot.5/: TowerPro_MG946R.SLDPRT  TowerPro_MG946R.STL
assets/: opencv_views.png~
chessaton_bringup/: CMakeLists.txt  package.xml
chessaton_bringup/launch/: gz.launch.py
chessaton_chess_manager/: CMakeLists.txt  README.md  package.xml
chessaton_chess_manager/include/: chess_handler.hpp  position.hpp
chessaton_chess_manager/launch/: chess_demo.launch.py  chess_robot.launch.py
chessaton_chess_manager/models/bishop_black/: model.sdf
chessaton_chess_manager/models/bishop_white/: model.sdf
chessaton_chess_manager/models/chessboard/: model.sdf
chessaton_chess_manager/models/chessboard/meshes/: chessboard.dae
chessaton_chess_manager/models/king_black/: model.sdf
chessaton_chess_manager/models/king_white/: model.sdf
chessaton_chess_manager/models/knight_black/: model.sdf
chessaton_chess_manager/models/knight_white/: model.sdf
chessaton_chess_manager/models/pawn_black/: model.sdf
chessaton_chess_manager/models/pawn_white/: model.sdf
chessaton_chess_manager/models/queen_black/: model.sdf
chessaton_chess_manager/models/queen_white/: model.sdf
chessaton_chess_manager/models/rook_black/: model.sdf
chessaton_chess_manager/models/rook_white/: model.sdf
chessaton_chess_manager/src/: chess_demo.cpp  chess_engine.cpp  chess_handler.cpp  chess_robot.cpp  position.cpp
chessaton_chess_manager/src/engines/: kojiro
chessaton_chess_manager/worlds/: chessboard  chessboard_demo
chessaton_chessaton_arm_ikfast_plugin/: CMakeLists.txt  README.md  chessaton_chessaton_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
chessaton_chessaton_arm_ikfast_plugin/src/: chessaton_chessaton_arm_ikfast_moveit_plugin.cpp  chessaton_chessaton_arm_ikfast_solver.cpp
chessaton_control/: CMakeLists.txt  README.md  package.xml
chessaton_control/include/: action_handler.hpp
chessaton_control/launch/: chessaton.launch.py  move_group_demo.launch.py  mtc_demo.launch.py  pick_place_camera_demo.launch.py  pick_place_demo.launch.py
chessaton_control/rviz/: movep_demo.rviz  mtc_demo.rviz
chessaton_control/src/: action_handler.cpp  find_object_position.cpp  move_group_demo.cpp  movep_demo.cpp  mtc_pick_place_demo.cpp  pick_place_demo.cpp  pick_place_depth_demo.cpp  pick_place_opencv_demo.cpp
chessaton_control/world/: simple_pick_place  simple_pick_place_obstacle
chessaton_description/: CMakeLists.txt  README.md  package.xml
chessaton_description/chessaton/: model.sdf
chessaton_description/config/: controllers_effort.yaml  controllers_position,velocity.yaml  controllers_position.yaml  controllers_velocity.yaml  initial_joint_positions.yaml
chessaton_description/launch/: view.launch.py  view_gz.launch.py
chessaton_description/meshes/: chessaton_gripper.STL  chessaton_link0.STL  chessaton_link1.STL  chessaton_link2.STL  chessaton_link3.STL  chessaton_link4.STL  left_finger.STL  right_finger.STL
chessaton_description/rviz/: view_robot.rviz
chessaton_description/scripts/: xacro2sdf.bash  xacro2sdf_direct.bash  xacro2urdf.bash
chessaton_description/urdf/: chessaton.csv  chessaton.ros2_control  chessaton.urdf  chessaton.urdf.xacro  chessaton_gazebo.xacro  chessaton_hand.xacro  chessaton_include.xacro
chessaton_description/urdf/sensors/: camera.urdf.xacro  camera_gazebo.xacro
chessaton_description/world/: chessaton.world
chessaton_description/worlds/: chessaton.world
chessaton_interfaces/: CMakeLists.txt  README.md  package.xml
chessaton_interfaces/srv/: GetBestMove.srv  SetState.srv
chessaton_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
chessaton_moveit_config/config/: chessaton.ros2_control.xacro  chessaton.srdf  chessaton.urdf.xacro  chessaton_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinematics_4dof.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensor_3d.yaml
chessaton_moveit_config/launch/: chessaton.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  pickplace.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
chessaton_moveit_config/scripts/: xacro2srdf.bash
chessaton_moveit_config/src/: movep.cpp  pick_place_memo.cpp
chessaton_moveit_config/srdf/: chessaton.srdf  chessaton.srdf.xacro  chessaton_macro.srdf.xacro
micro_ros_esp/: README.md  platformio.ini
micro_ros_esp/src/: main.cpp
