<?xml version="1.0"?>
<package format="3">
  <name>chessaton_bringup</name>
  <version>1.0.0</version>
  <description>Metapackage for Franka Emika Panda</description>
  <maintainer email="orsula.andrej@gmail.com">babak-ssh</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>chessaton_description</build_depend>
  <build_depend>chessaton_moveit_config</build_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
