<?xml version="1.0"?>
<package format="3">
    <name>chessaton_control</name>
    <version>1.0.0</version>
    <description>
        chessaton control related scripts and programs.
    </description>

    <maintainer email="babak.sefidgar@gmail.com">Babak-SSH</maintainer>
    <license>BSD</license>
    <author email="babak.sefidgar@gmail.com">Babak-SSH</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>moveit_ros_move_group</exec_depend>
    <exec_depend>moveit_kinematics</exec_depend>
    <exec_depend>moveit_planners</exec_depend>
    <exec_depend>moveit_simple_controller_manager</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>moveit_visual_tools</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>xacro</exec_depend>
    <!-- The next 2 packages are required for the gazebo simulation.
         We don't include them by default to prevent installing gazebo and all its dependencies. -->
    <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
    <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
    <exec_depend>chessaton_description</exec_depend>
    <exec_depend>chessaton_chessaton_arm_ikfast_plugin</exec_depend>
    <exec_depend>chessaton_moveit_config</exec_depend>
    <exec_depend>chessaton_interfaces</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>moveit_configs_utils</exec_depend>
    <exec_depend>moveit_ros_move_group</exec_depend>
    <exec_depend>moveit_ros_visualization</exec_depend>
    <exec_depend>moveit_setup_assistant</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>rviz_common</exec_depend>
    <exec_depend>rviz_default_plugins</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>xacro</exec_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <depend>geometry_msgs</depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>