<?xml version="1.0"?>
<package format="3">
  <name>chessaton_description</name>
  <version>0.1.0</version>
  <description>The chessaton_description package</description>

  <author email="babak.sefidar@gmail.com">babak-ssh</author>
  <maintainer email="babak.sefidar@gmail.com">babak-ssh</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>