<?xml version="1.0"?>
<package format="3">
    <name>chessaton_interfaces</name>
    <version>1.0.0</version>
    <description>
        Contains message and service definitions used by the examples.
    </description>

    <maintainer email="babak.sefidgar@gmail.com">Babak-SSH</maintainer>
    <license>BSD</license>
    <author email="babak.sefidgar@gmail.com">Babak-SSH</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>